# zmctf-flag-detector-core

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  Cargo.toml  README.md  rustfmt.toml
flag-detector/: Cargo.toml
flag-detector/src/: analyzer.rs  api.rs  archive.rs  auto_analyzer.rs  cache.rs  cipher.rs  config.rs  decoder.rs  encoding.rs  extractor.rs  facade.rs  hash.rs  hashcat.rs  history.rs  lib.rs  magic.rs  matcher.rs  nth_patterns.rs  pcap.rs  prelude.rs  rules.rs  stego.rs  tool_detector.rs  types.rs  ws.rs
floss-integration/: Cargo.toml
floss-integration/src/: lib.rs  runner.rs  types.rs
tool-runner/: Cargo.toml
tool-runner/src/: lib.rs
zmctf-constraints/: Cargo.toml
zmctf-constraints/src/: lib.rs
