[package]
name = "tool-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZMctf 外部命令统一执行器（timeout/输出截断/环境变量）"
repository = "https://example.invalid/zmctf"
readme = "../README.md"
keywords = ["ctf", "security", "forensics"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
log.workspace = true
zmctf-constraints = { path = "../zmctf-constraints" }

[lib]
name = "tool_runner"
path = "src/lib.rs"
